fix response layer z-index

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4775,7 +4775,7 @@ input[type='text'], .custom-input {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1001;
+  z-index: 1100;
   display: none; }
   .response-layer .wrapper {
     text-align: center;
